argocd-apps/echoserver/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: eks-cluster-apps
    alb.ingress.kubernetes.io/group.order: '11'
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:052843388884:certificate/ca4b5860-87f1-451f-aca2-ad046c65093b"


spec:
  ingressClassName: alb
  rules:
    - host: echoserver.cmcloudlab868.info
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
